--- a/NetworkAnalysis/ActivityQuality/activity_quality_check.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_quality_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,6 +656,7 @@
     "        try:\n",
     "            data = pd.read_csv(file_path)\n",
     "            data_subset = data[(data['DIV'] >= 14) & (data['DIV'] <= 28)]\n",
+    "            data_subset.loc[:, 'NeuronType'] = data_subset['NeuronType'].str.strip()\n",
     "            if 'WT' not in data_subset['NeuronType'].unique() or data_subset[data_subset['NeuronType'] == 'WT'].empty:\n",
     "                return (\"Missing WT data.\", \"nan\", False)\n",
     "\n",
@@ -697,13 +698,13 @@
     "                ineligible.append((subfolder_name, \"nan\"))\n",
     "    \n",
     "    # Save results to CSV files\n",
-    "    pd.DataFrame(eligible, columns=['Subfolder', 'Percentage of Qualified Lines']).to_csv(os.path.join(base_path, 'Eligible_Cohorts.csv'), index=False)\n",
-    "    pd.DataFrame(ineligible, columns=['Subfolder', 'Percentage of Qualified Lines']).to_csv(os.path.join(base_path, 'Ineligible_Cohorts.csv'), index=False)"
+    "    pd.DataFrame(eligible, columns=['Trial', 'Percentage of Qualified Lines']).to_csv(os.path.join(base_path, 'Eligible_Cohorts.csv'), index=False)\n",
+    "    pd.DataFrame(ineligible, columns=['Trial', 'Percentage of Qualified Lines']).to_csv(os.path.join(base_path, 'Ineligible_Cohorts.csv'), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -719,6 +720,7 @@
       "ADNP_T2: The dataset is qualified. Less than or equal to 50% of lines show low activity (<50%). Percentage of qualified lines: 100.00%\n",
       "CDKL5-E6D_T2_C1_05212024: The dataset is not qualified. More than 50% of lines show low activity (<50%). Percentage of qualified lines: 31.25%\n",
       "ADNP_T3: The dataset is qualified. Less than or equal to 50% of lines show low activity (<50%). Percentage of qualified lines: 100.00%\n",
+      "KCNT1_T3: The dataset is not qualified. More than 50% of lines show low activity (<50%). Percentage of qualified lines: 10.00%\n",
       "SHANK3_1: The dataset is qualified. Less than or equal to 50% of lines show low activity (<50%). Percentage of qualified lines: 100.00%\n",
       "CHD8_T4_C2_02082024: The dataset is not qualified. More than 50% of lines show low activity (<50%). Percentage of qualified lines: 9.38%\n",
       "ADNP_T4_C1_06282024: The dataset is qualified. Less than or equal to 50% of lines show low activity (<50%). Percentage of qualified lines: 100.00%\n"
@@ -738,6 +740,93 @@
    "outputs": [],
    "source": [
     "# Tunning parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/liufanling/miniconda3/envs/my_env_39/lib/python3.9/site-packages/_distutils_hack/__init__.py:32: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSTALLED VERSIONS\n",
+      "------------------\n",
+      "commit              : a671b5a8bf5dd13fb19f0e88edc679bc9e15c673\n",
+      "python              : 3.9.19.final.0\n",
+      "python-bits         : 64\n",
+      "OS                  : Darwin\n",
+      "OS-release          : 23.6.0\n",
+      "Version             : Darwin Kernel Version 23.6.0: Mon Jul 29 21:14:30 PDT 2024; root:xnu-10063.141.2~1/RELEASE_ARM64_T6000\n",
+      "machine             : arm64\n",
+      "processor           : arm\n",
+      "byteorder           : little\n",
+      "LC_ALL              : None\n",
+      "LANG                : None\n",
+      "LOCALE              : None.UTF-8\n",
+      "\n",
+      "pandas              : 2.1.4\n",
+      "numpy               : 1.26.4\n",
+      "pytz                : 2024.1\n",
+      "dateutil            : 2.9.0\n",
+      "setuptools          : 72.1.0\n",
+      "pip                 : 24.0\n",
+      "Cython              : None\n",
+      "pytest              : None\n",
+      "hypothesis          : None\n",
+      "sphinx              : None\n",
+      "blosc               : None\n",
+      "feather             : None\n",
+      "xlsxwriter          : None\n",
+      "lxml.etree          : None\n",
+      "html5lib            : None\n",
+      "pymysql             : None\n",
+      "psycopg2            : None\n",
+      "jinja2              : 3.1.4\n",
+      "IPython             : 8.18.1\n",
+      "pandas_datareader   : None\n",
+      "bs4                 : None\n",
+      "bottleneck          : 1.3.7\n",
+      "dataframe-api-compat: None\n",
+      "fastparquet         : None\n",
+      "fsspec              : None\n",
+      "gcsfs               : None\n",
+      "matplotlib          : 3.9.1.post1\n",
+      "numba               : None\n",
+      "numexpr             : 2.8.7\n",
+      "odfpy               : None\n",
+      "openpyxl            : 3.1.5\n",
+      "pandas_gbq          : None\n",
+      "pyarrow             : None\n",
+      "pyreadstat          : None\n",
+      "pyxlsb              : None\n",
+      "s3fs                : None\n",
+      "scipy               : 1.13.1\n",
+      "sqlalchemy          : None\n",
+      "tables              : None\n",
+      "tabulate            : None\n",
+      "xarray              : None\n",
+      "xlrd                : None\n",
+      "zstandard           : None\n",
+      "tzdata              : 2023.3\n",
+      "qtpy                : None\n",
+      "pyqt5               : None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.show_versions()"
    ]
   }
  ],
