--- a/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
@@ -9,147 +9,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Final version, add neuron type to the output\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
     "\n",
     "def threshold_filter(datapath):\n",
-    "    \"\"\"\n",
-    "    Filters out groups where any 'Active_area' values are less than 35 after DIV 7.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - datapath: str, path to the CSV file containing the data\n",
-    "\n",
-    "    Returns:\n",
-    "    - DataFrame containing unique combinations of 'Chip_ID' and 'Well' for outliers\n",
-    "    \"\"\"\n",
-    "    # Load the data from the provided path\n",
     "    data = pd.read_csv(datapath)\n",
-    "    \n",
-    "    # Subset data to drop DIV 4 and DIV 7, keeping only DIV > 7\n",
     "    data_subset = data[data['DIV'] > 7]\n",
-    "\n",
-    "    # Filter out rows where 'Active_area' is less than or equal to 35\n",
     "    data_outliers = data_subset[data_subset['Active_area'] <= 35]\n",
-    "\n",
-    "    # Identify the unique combinations of Chip_ID and Well after filtering\n",
-    "    data_outliers_unique = data_outliers[['Chip_ID', 'Well']].drop_duplicates()\n",
-    "\n",
-    "    # Return the unique combinations DataFrame\n",
+    "    data_outliers_unique = data_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_outliers_unique\n",
     "\n",
-    "\n",
     "def iqr_filter(datapath):\n",
-    "    \"\"\"\n",
-    "    Filters out groups where any 'Active_area' values are outliers based on IQR for each 'DIV' group.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - datapath: str, path to the CSV file containing the data\n",
-    "\n",
-    "    Returns:\n",
-    "    - DataFrame containing unique combinations of 'Chip_ID' and 'Well' for outliers\n",
-    "    \"\"\"\n",
-    "    # Load the data from the provided path\n",
     "    data = pd.read_csv(datapath)\n",
-    "    \n",
-    "    # Subset data to only include DIV > 7\n",
     "    data_subset = data[data['DIV'] > 7].copy()\n",
-    "\n",
-    "    # Calculate the IQR for each group\n",
     "    Q1 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.25))\n",
     "    Q3 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.75))\n",
     "    IQR = Q3 - Q1\n",
-    "\n",
-    "    # Determine the bounds for outliers\n",
     "    lower_bound = Q1 - 1.5 * IQR\n",
     "    upper_bound = Q3 + 1.5 * IQR\n",
-    "\n",
-    "    # Filter out rows where 'Active_area' is an outlier\n",
     "    data_iqr_outliers = data_subset[(data_subset['Active_area'] < lower_bound) | (data_subset['Active_area'] > upper_bound)]\n",
-    "\n",
-    "    # Identify the unique combinations of Chip_ID and Well after filtering\n",
-    "    data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well']].drop_duplicates()\n",
-    "\n",
-    "    # Return the unique combinations DataFrame\n",
+    "    data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_iqr_outliers_unique\n",
     "\n",
-    "\n",
     "def z_score_filter(datapath):\n",
-    "    \"\"\"\n",
-    "    Filters out groups where any 'Active_area' values are outliers based on Z-score for each 'DIV' group.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - datapath: str, path to the CSV file containing the data\n",
-    "\n",
-    "    Returns:\n",
-    "    - DataFrame containing unique combinations of 'Chip_ID' and 'Well' for outliers\n",
-    "    \"\"\"\n",
-    "    # Load the data from the provided path\n",
     "    data = pd.read_csv(datapath)\n",
-    "    \n",
-    "    # Filter the data to only include DIV > 7 and make a copy to avoid SettingWithCopyWarning\n",
     "    data_subset = data[data['DIV'] > 7].copy()\n",
-    "\n",
-    "    # Calculate the Z-scores for 'Active_area' within each group of 'DIV'\n",
     "    data_subset['Z_score'] = data_subset.groupby('DIV')['Active_area'].transform(lambda x: stats.zscore(x))\n",
-    "\n",
-    "    # Define a threshold for identifying outliers (commonly Z > 2 or Z < -2)\n",
     "    z_threshold = 2\n",
-    "\n",
-    "    # Filter out rows where 'Active_area' is an outlier based on Z-score within each 'DIV'\n",
     "    data_z_outliers = data_subset[(data_subset['Z_score'] > z_threshold) | (data_subset['Z_score'] < -z_threshold)]\n",
-    "\n",
-    "    # Identify the unique combinations of Chip_ID and Well for the outliers\n",
-    "    data_z_outliers_unique = data_z_outliers[['Chip_ID', 'Well']].drop_duplicates()\n",
-    "\n",
-    "    # Return the unique combinations DataFrame\n",
+    "    data_z_outliers_unique = data_z_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_z_outliers_unique\n",
     "\n",
     "def combine_filters(datapath):\n",
-    "    \"\"\"\n",
-    "    Combines results from threshold_filter, iqr_filter, and z_score_filter to find unique outliers.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - datapath: str, path to the CSV file containing the data\n",
-    "\n",
-    "    Returns:\n",
-    "    - DataFrame containing unique combinations of 'Chip_ID' and 'Well' for all outliers across the three criteria\n",
-    "    \"\"\"\n",
-    "    # Get unique outliers from each filter function\n",
     "    outliers_threshold = threshold_filter(datapath)\n",
     "    outliers_iqr = iqr_filter(datapath)\n",
     "    outliers_z_score = z_score_filter(datapath)\n",
-    "\n",
-    "    # Combine all unique outliers\n",
-    "    combined_outliers = pd.concat([outliers_threshold, outliers_iqr, outliers_z_score])\n",
-    "\n",
-    "    # Display the results for each filter\n",
+    "    combined_outliers = pd.concat([outliers_threshold, outliers_iqr, outliers_z_score]).drop_duplicates()\n",
     "    print(\"Outliers identified by Threshold Filter:\")\n",
     "    print(outliers_threshold)\n",
     "    print(\"\\nOutliers identified by IQR Filter:\")\n",
     "    print(outliers_iqr)\n",
     "    print(\"\\nOutliers identified by Z-score Filter:\")\n",
-    "    print(outliers_z_score)"
+    "    print(outliers_z_score)\n",
+    "    return combined_outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage\n",
     "combined_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/SYNGAP_T1_ALL/Activity/Compiled_ActivityScan.csv\"\n",
     "therapy_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_Therapy_t1/Activity/Compiled_ActivityScan.csv\"\n",
-    "syngap_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_t1/Activity/Compiled_ActivityScan.csv\""
+    "syngap_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_t1/Activity/Compiled_ActivityScan.csv\"\n",
+    "knct3_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T3/Activity/Compiled_ActivityScan.csv\"\n",
+    "knct4_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T4/Activity/Compiled_ActivityScan.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,35 +83,101 @@
      "output_type": "stream",
      "text": [
       "Outliers identified by Threshold Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "66   M07309     1\n",
-      "68   M07309     3\n",
-      "152  M07036     3\n",
-      "156  M07301     1\n",
-      "163  M07309     2\n",
-      "216  M06691     1\n",
-      "222  M07036     1\n",
-      "223  M07036     2\n",
-      "225  M07036     4\n",
-      "322  M07036     5\n",
-      "373  M07301     2\n",
+      "   Chip_ID  Well NeuronType\n",
+      "46  M07299     1        HOM\n",
+      "48  M07299     3        HOM\n",
       "\n",
       "Outliers identified by IQR Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "116  M07309     3\n",
+      "   Chip_ID  Well NeuronType\n",
+      "71  M07299     3        HOM\n",
+      "85  M08034     6        HET\n",
       "\n",
       "Outliers identified by Z-score Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "164  M07309     3\n"
+      "    Chip_ID  Well NeuronType\n",
+      "48   M07299     3        HOM\n",
+      "85   M08034     6        HET\n",
+      "100  M08026     4        HET\n",
+      "128  M08034     3        HOM\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chip_ID</th>\n",
+       "      <th>Well</th>\n",
+       "      <th>NeuronType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>1</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>6</td>\n",
+       "      <td>HET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M08026</td>\n",
+       "      <td>4</td>\n",
+       "      <td>HET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Chip_ID  Well NeuronType\n",
+       "46   M07299     1        HOM\n",
+       "48   M07299     3        HOM\n",
+       "85   M08034     6        HET\n",
+       "100  M08026     4        HET\n",
+       "128  M08034     3        HOM"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Example usage\n",
-    "combine_filters(combined_path)"
+    "combine_filters(knct4_path)"
    ]
   },
   {
@@ -873,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
