update group check notebook

--- a/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
+++ b/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# final version for generate data for homogenity check\n",
+    "# final version for generate activity and network data for homogenity check\n",
     "import os\n",
     "import pandas as pd\n",
     "\n",
@@ -119,6 +119,12 @@
     "                # Rename 'IBI' column to 'mean_IBI' if it exists\n",
     "                if 'IBI' in df_network.columns:\n",
     "                    df_network.rename(columns={'IBI': 'mean_IBI'}, inplace=True)\n",
+    "                # Rename 'Burst_Peak' column to 'mean_Spike_per_Burst' if it exists\n",
+    "                if 'Burst_Peak' in df_network.columns:\n",
+    "                    df_network.rename(columns={'Burst_Peak': 'mean_Burst_Peak'}, inplace=True)\n",
+    "                # Rename 'Spike_per_Burst' column to 'mean_Spike_per_Burst' if it exists\n",
+    "                if 'Spike_per_Burst' in df_network.columns:\n",
+    "                    df_network.rename(columns={'Spike_per_Burst': 'mean_Spike_per_Burst'}, inplace=True)\n",
     "                # Save the modified CSV to the destination path\n",
     "                df_network.to_csv(os.path.join(output_folder, 'Compiled_Networks.csv'), index=False)\n",
     "            \n",
@@ -171,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +187,13 @@
     "quickcheck = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/QuickCheck'\n",
     "\n",
     "process_datasets(source, destination, quickcheck)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------"
    ]
   },
   {
