--- a/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
+++ b/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +125,8 @@
     "                # Rename 'Spike_per_Burst' column to 'mean_Spike_per_Burst' if it exists\n",
     "                if 'Spike_per_Burst' in df_network.columns:\n",
     "                    df_network.rename(columns={'Spike_per_Burst': 'mean_Spike_per_Burst'}, inplace=True)\n",
+    "                if 'BurstDuration' in df_network.columns:\n",
+    "                    df_network.rename(columns={'BurstDuration': 'mean_BurstDuration'}, inplace=True)\n",
     "                # Save the modified CSV to the destination path\n",
     "                df_network.to_csv(os.path.join(output_folder, 'Compiled_Networks.csv'), index=False)\n",
     "            \n",
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,24 +277,30 @@
     "    # Create a writer object to write multiple sheets\n",
     "    with pd.ExcelWriter(output_path) as writer:\n",
     "        for sheet_name in xls.sheet_names:\n",
-    "            # Read each sheet, treating specific columns as strings\n",
-    "            df = pd.read_excel(xls, sheet_name=sheet_name, dtype={\n",
-    "                'Div': str, 'Assay': str, 'Run #': str, 'Wells_Recorded': str,\n",
-    "                'Neuron Source': str, 'ID': str\n",
-    "            })\n",
-    "            # Rename 'Div' column to 'DIV'\n",
-    "            df.rename(columns={'Div': 'DIV'}, inplace=True)\n",
-    "            \n",
-    "            # Ensure all data in the specified columns are treated as strings\n",
-    "            for col in ['DIV', 'Assay', 'Run #', 'ID', 'Wells_Recorded', 'Neuron Source']:\n",
-    "                df[col] = df[col].astype(str).str.strip()\n",
+    "            # Read each sheet, initially loading all columns normally\n",
+    "            df = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "\n",
+    "            # Columns to convert to string\n",
+    "            str_columns = ['Div', 'Assay', 'Run #', 'Wells_Recorded', 'ID', 'Neuron Source']\n",
+    "\n",
+    "            # Process each column that needs to be string\n",
+    "            for col in str_columns:\n",
+    "                if col in df.columns:  # Check if column exists in DataFrame\n",
+    "                    # Convert numeric values to string, and ensure no floating point representation\n",
+    "                    df[col] = df[col].apply(lambda x: f'{int(x):d}' if pd.notnull(x) and isinstance(x, (int, float)) else x)\n",
+    "                    # Strip any leading/trailing white space\n",
+    "                    df[col] = df[col].astype(str).str.strip()\n",
+    "\n",
+    "            # Rename 'Div' column to 'DIV' if it exists\n",
+    "            if 'Div' in df.columns:\n",
+    "                df.rename(columns={'Div': 'DIV'}, inplace=True)\n",
     "\n",
     "            # Save each processed DataFrame to a separate sheet in the same Excel file\n",
     "            df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
     "# Example usage\n",
-    "source_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/selected_Check.xlsx'  # Replace with your actual file path\n",
-    "destination_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/Reffile.xlsx'   # Replace with your desired output file path\n",
+    "source_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/selected_Check.xlsx'\n",
+    "destination_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/Reffile.xlsx'\n",
     "preprocess_excel(source_excel_path, destination_excel_path)"
    ]
   },
