--- a/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +50,20 @@
     "    outliers_iqr = iqr_filter(datapath)\n",
     "    outliers_z_score = z_score_filter(datapath)\n",
     "    combined_outliers = pd.concat([outliers_threshold, outliers_iqr, outliers_z_score]).drop_duplicates()\n",
+    "    combined_outliers.sort_values(by=['Chip_ID', 'Well'], inplace=True)\n",
+    "    combined_outliers.reset_index(drop=True, inplace=True)\n",
     "    print(\"Outliers identified by Threshold Filter:\")\n",
-    "    print(outliers_threshold)\n",
+    "    print(outliers_threshold.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
     "    print(\"\\nOutliers identified by IQR Filter:\")\n",
-    "    print(outliers_iqr)\n",
+    "    print(outliers_iqr.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
     "    print(\"\\nOutliers identified by Z-score Filter:\")\n",
-    "    print(outliers_z_score)\n",
+    "    print(outliers_z_score.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
     "    return combined_outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +72,13 @@
     "therapy_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_Therapy_t1/Activity/Compiled_ActivityScan.csv\"\n",
     "syngap_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_t1/Activity/Compiled_ActivityScan.csv\"\n",
     "knct3_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T3/Activity/Compiled_ActivityScan.csv\"\n",
-    "knct4_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T4/Activity/Compiled_ActivityScan.csv\""
+    "knct4_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T4/Activity/Compiled_ActivityScan.csv\"\n",
+    "cdkl4_t2_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/QuickCheck/CDKL5-E6D_T2_C1_05212024/Activity/Compiled_ActivityScan.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -128,49 +131,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>0</th>\n",
        "      <td>M07299</td>\n",
        "      <td>1</td>\n",
        "      <td>HOM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
+       "      <th>1</th>\n",
        "      <td>M07299</td>\n",
        "      <td>3</td>\n",
        "      <td>HOM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>6</td>\n",
-       "      <td>HET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>2</th>\n",
        "      <td>M08026</td>\n",
        "      <td>4</td>\n",
        "      <td>HET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
+       "      <th>3</th>\n",
        "      <td>M08034</td>\n",
        "      <td>3</td>\n",
        "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>6</td>\n",
+       "      <td>HET</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Chip_ID  Well NeuronType\n",
-       "46   M07299     1        HOM\n",
-       "48   M07299     3        HOM\n",
-       "85   M08034     6        HET\n",
-       "100  M08026     4        HET\n",
-       "128  M08034     3        HOM"
+       "  Chip_ID  Well NeuronType\n",
+       "0  M07299     1        HOM\n",
+       "1  M07299     3        HOM\n",
+       "2  M08026     4        HET\n",
+       "3  M08034     3        HOM\n",
+       "4  M08034     6        HET"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,6 +255,259 @@
    ],
    "source": [
     "combine_filters(therapy_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers identified by Threshold Filter:\n",
+      "   Chip_ID  Well NeuronType\n",
+      "0   M06804     1       FxWT\n",
+      "1   M06804     2       FxWT\n",
+      "2   M06804     4      FxHET\n",
+      "3   M06844     1       FxWT\n",
+      "4   M06844     4      FxHET\n",
+      "5   M06844     5      FxHET\n",
+      "6   M07038     2       FxWT\n",
+      "7   M07038     3       FxWT\n",
+      "8   M07038     4      FxHET\n",
+      "9   M07038     5      FxHET\n",
+      "10  M07038     6      FxHET\n",
+      "11  M08024     1       FxWT\n",
+      "12  M08024     2       FxWT\n",
+      "13  M08024     3       FxWT\n",
+      "14  M08024     4      FxHET\n",
+      "15  M08024     5      FxHET\n",
+      "16  M08024     6      FxHET\n",
+      "17  M08029     1       FxWT\n",
+      "18  M08029     2       FxWT\n",
+      "19  M08029     3       FxWT\n",
+      "20  M08034     1       FxWT\n",
+      "21  M08034     2       FxWT\n",
+      "22  M08034     3       FxWT\n",
+      "\n",
+      "Outliers identified by IQR Filter:\n",
+      "Empty DataFrame\n",
+      "Columns: [Chip_ID, Well, NeuronType]\n",
+      "Index: []\n",
+      "\n",
+      "Outliers identified by Z-score Filter:\n",
+      "  Chip_ID  Well NeuronType\n",
+      "0  M06804     4      FxHET\n",
+      "1  M07038     3       FxWT\n",
+      "2  M07038     6      FxHET\n",
+      "3  M08024     3       FxWT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chip_ID</th>\n",
+       "      <th>Well</th>\n",
+       "      <th>NeuronType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M06804</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M06804</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M06804</td>\n",
+       "      <td>4</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M06844</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M06844</td>\n",
+       "      <td>4</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M06844</td>\n",
+       "      <td>5</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M07038</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M07038</td>\n",
+       "      <td>3</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M07038</td>\n",
+       "      <td>4</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M07038</td>\n",
+       "      <td>5</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>M07038</td>\n",
+       "      <td>6</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>5</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>6</td>\n",
+       "      <td>FxHET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>M08029</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>M08029</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>M08029</td>\n",
+       "      <td>3</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>2</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>3</td>\n",
+       "      <td>FxWT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Chip_ID  Well NeuronType\n",
+       "0   M06804     1       FxWT\n",
+       "1   M06804     2       FxWT\n",
+       "2   M06804     4      FxHET\n",
+       "3   M06844     1       FxWT\n",
+       "4   M06844     4      FxHET\n",
+       "5   M06844     5      FxHET\n",
+       "6   M07038     2       FxWT\n",
+       "7   M07038     3       FxWT\n",
+       "8   M07038     4      FxHET\n",
+       "9   M07038     5      FxHET\n",
+       "10  M07038     6      FxHET\n",
+       "11  M08024     1       FxWT\n",
+       "12  M08024     2       FxWT\n",
+       "13  M08024     3       FxWT\n",
+       "14  M08024     4      FxHET\n",
+       "15  M08024     5      FxHET\n",
+       "16  M08024     6      FxHET\n",
+       "17  M08029     1       FxWT\n",
+       "18  M08029     2       FxWT\n",
+       "19  M08029     3       FxWT\n",
+       "20  M08034     1       FxWT\n",
+       "21  M08034     2       FxWT\n",
+       "22  M08034     3       FxWT"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine_filters(cdkl4_t2_path)"
    ]
   },
   {
