--- a/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
+++ b/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +39,8 @@
     "                    well_number = int(column.split('W')[1])  # Assuming well numbers are like 'W1', 'W2', etc.\n",
     "                    plate_number = general_info_df[general_info_df['Mapping_Key'] == column]['Plate #'].values[0]  # Get the Plate #\n",
     "                    # Standardize NeuronType for any genotype containing \"WT\"\n",
-    "                    # neuron_type = \"WT\" if \"WT\" in genotype else genotype\n",
-    "                    neuron_type = genotype\n",
+    "                    neuron_type = \"WT\" if \"WT\" in genotype else genotype\n",
+    "                    # neuron_type = genotype\n",
     "                    new_csv_data.append({\n",
     "                        'DIV': row['DIV'],\n",
     "                        'Chip_ID': plate_id,\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
